--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,18 +5,10 @@ authors = [
     {name="Gustaf Gren", email="6107181+skogsgren@users.noreply.github.com"},
 ]
 description = "(Semantic) text search for Firefox history"
-dependencies = [
-    "git+https://github.com/brandonstarxel/chunking_evaluation.git#egg=chunkyboy",
-    "numpy==1.26.4",
-    "sentence-transformers",
-    "tokenizers",
-    "transformers",
-    "tqdm",
-]
+dependencies = []
 
 [project.scripts]
 foxhole-install = "foxhole.install:install_native_host"
-foxhole = "foxhole:foxhole.__main__:main"
 
 [project.optional-dependencies]
 dev = ["pytest"]
