--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,10 @@ authors = [
     {name="Gustaf Gren", email="6107181+skogsgren@users.noreply.github.com"},
 ]
 description = "(Semantic) text search for Firefox history"
-dependencies = []
+dependencies = [
+    "scikit-learn==1.6.1",
+    "numpy==1.26.4",
+]
 
 [project.scripts]
 foxhole-install = "foxhole.install:install_native_host"
