fix: refactor to use recursive text splitter; abstract using langchain
based on https://callumjmac.github.io/posts/2024/04/22/RAG_intro/

basically just using LangChain to make code easier

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,20 @@ authors = [
 ]
 description = "(Semantic) text search for Firefox history"
 dependencies = [
-    "scikit-learn==1.6.1",
     "numpy==1.26.4",
+    "scikit-learn==1.6.1",
+    "langchain",
+    "langchain-huggingface",
+    "langchain-community",
+    "langchain-chroma",
+    "langchain-text-splitters",
+    "chromadb",
+    "sqlalchemy",
+    "transformers"
 ]
 
 [project.scripts]
+foxhole-search = "foxhole.cli:main"
 foxhole-install = "foxhole.install:install_native_host"
 
 [project.optional-dependencies]
