feat: add wrappers to make troubleshooting easier
especially: user endpoints for listing all documents in DOCPATH and showing a specific document using ID

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ foxhole-search = "foxhole.cli:main"
 foxhole-install = "foxhole.install:install_native_host"
 foxhole-update = "foxhole.cli:update_chroma_db"
 foxhole-prune = "foxhole.prune:main"
+foxhole-ls = "foxhole.cli:list_documents"
+foxhole-view = "foxhole.cli:view_document"
 
 [project.optional-dependencies]
 dev = ["pytest", "ir_measures"]
