--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,32 +4,14 @@ version = "0.0.1"
 authors = [
     {name="Gustaf Gren", email="6107181+skogsgren@users.noreply.github.com"},
 ]
-description = "(Semantic) text search for Firefox history"
-dependencies = [
-    "numpy==1.26.4",
-    "scikit-learn==1.6.1",
-    "langchain",
-    "langchain-huggingface",
-    "langchain-community",
-    "langchain-chroma",
-    "langchain-text-splitters",
-    "chromadb",
-    "sqlalchemy",
-    "transformers",
-    "openai",
-    "rank_bm25"
-]
+description = "Text search for Firefox history"
 
 [project.scripts]
 foxhole-search = "foxhole.cli:main"
 foxhole-install = "foxhole.install:install_native_host"
-foxhole-update = "foxhole.cli:update_chroma_db"
 foxhole-prune = "foxhole.prune:main"
 foxhole-ls = "foxhole.cli:list_documents"
 foxhole-view = "foxhole.cli:view_document"
-
-[project.optional-dependencies]
-dev = ["pytest", "ir_measures"]
 
 [build-system]
 requires = ["setuptools", "wheel"]
