--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,17 +1,9 @@
-name: pytest
+name: test on push
 
 on:
   push:
     branches:
       - main
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
-      - run: pip install -e .[dev]
-      - run: foxhole-install
-      - run: python3 -m pytest
+  call-test-push:
+    uses: ./.github/workflows/pytest.yaml
